--- a/views/userViews/personalInfo.hbs
+++ b/views/userViews/personalInfo.hbs
@@ -711,8 +711,7 @@
                         <div class="col-xs-12 col-sm-6">
                             <div class="form-group required">
                                 <label for="InputName">Username <sup>*</sup> </label>
-                                <input required type="text" class="form-control" id="InputName"
-                                    placeholder="{{}}">
+                                <input required type="text" class="form-control" id="InputName">
                             </div>
                             <div class="form-group">
                                 <label for="InputEmail"> Email </label>
@@ -763,8 +762,7 @@
 
     <div class="gap"></div>
 
-    <!-- Le javascript
-================================================== -->
+    <!-- Le javascript ================================================== -->
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
