--- a/views/userViews/orderStatus.hbs
+++ b/views/userViews/orderStatus.hbs
@@ -13,6 +13,8 @@
     <link rel="shortcut icon" href="assets/ico/favicon.png" />
     <title>TSHOP - Bootstrap E-Commerce Parallax Theme</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
@@ -744,20 +746,23 @@
                     <div class="statusContent">
                         <div class="col-sm-12">
                             <div class="statusTop">
-                                <p><strong>Status:</strong>{{orderData.orderStatus}}</p>
+                                <p><strong>Status:</strong></p><p>{{orderData.orderStatus}}</p>
 
                                 <p><strong>Order Date:</strong> {{orderData.orderDate}}</p>
 
                                 <p><strong>Order Number:</strong> #{{orderData.orderNumber}}</p>
                             </div>
                         </div>
+                        <div class="col-sm-12">
+                            <div id="cancelledBtn" style="display: none;" class="text-bg-danger p-3">This order has been cancelled</div>
+                        </div>
                         {{#if isCancelled}}
                         <div class="col-sm-12">
-                            <div id="cancelledBtn" class="text-bg-danger p-3">This order has been cancelled</div>
+                            <button class="btn btn-danger btn-lg btn-block">This order has been cancelled</button> 
                         </div>
                         {{else}}
                         <div class="col-sm-12">
-                            <div id="cancelBtn" class="btn btn-danger" onclick="cancelOrder('{{orderData}}')">Cancel
+                            <div id="cancelBtn" class="btn btn-danger" onclick="cancelOrder('{{orderData._id}}')">Cancel
                                 this order
                             </div>
                         </div>
@@ -833,7 +838,7 @@
                                                                     {{this.productId.productName}}
                                                                 </a>
                                                             </h4>
-                                                            <div class="price"><span> ₹{{this.productId.productPrice}}
+                                                            <div class="price"><span> {{this.productId.productName}}
                                                                 </span></div>
                                                         </div>
                                                     </td>
@@ -918,41 +923,43 @@
 
     <!-- include custom script for site  -->
     <script src="assets/js/script.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script>
+        async function cancelOrder(orderId) {
+            Swal.fire({
+                title: "Are you sure?",
+                text: "You won't be able to revert this!",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, delete it!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    fetch('/account/orderList/orderStatus/cancelOrder/' + orderId, { method: 'PUT' }).then(d => console.log(d))
+                    let cancelBtnElement = document.getElementById('cancelBtn')
+                    let cancelledBtnElement = document.getElementById('cancelledBtn')
+
+                    cancelBtnElement.style.display = 'none'
+                    cancelledBtnElement.style.display = 'block'
+                    Swal.fire({
+                        title: "Deleted!",
+                        text: "Your file has been deleted.",
+                        icon: "success"
+                    });
+                }
+            });
+        }
+    </script>
+
+
 </body>
 
 <!-- Mirrored from templatecycle.com/tshop/v6/gray/order-status.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:55:53 GMT -->
 
-<script>
-    async function cancelOrder(orderId) {
-        Swal.fire({
-            title: "Are you sure?",
-            text: "You won't be able to revert this!",
-            icon: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#3085d6",
-            cancelButtonColor: "#d33",
-            confirmButtonText: "Yes, delete it!"
-        }).then((result) => {
-            if (result.isConfirmed) {
 
-                fetch('/account/orderList/orderStatus/cancelOrder/' + orderId, { method: DELETE }).then(d => console.log(d))
-
-                Swal.fire({
-                    title: "Deleted!",
-                    text: "Your file has been deleted.",
-                    icon: "success"
-                });
-
-                let cancelBtnElement = document.getElementById('cancelBtn')
-                let cancelledBtnElement = document.getElementById('cancelledBtn')
-
-                cancelBtnElement.style.display = 'none'
-                cancelledBtnElement.style.display = 'block'
-
-            }
-        });
-    }
-</script>
 
 
 </html>
