--- a/views/adminViews/adminLogin.hbs
+++ b/views/adminViews/adminLogin.hbs
@@ -19,7 +19,7 @@
 
                     <form action="/admin" method="post" class="card-body cardbody-color p-lg-5">
                         <div class="text-center">
-                            <img src="images/logo-dark.png"
+                            <img src="/images/logo-dark.png"
                                 class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3" width="200px"
                                 alt="profile">
                         </div>
