--- a/views/userViews/signupLoginPage.hbs
+++ b/views/userViews/signupLoginPage.hbs
@@ -718,7 +718,7 @@
               </div>
               <div class="form-group">
                 <label>Confirm Password</label>
-                <input required minlength="5" title="Paswords doesn't match" id="confirmPass" type="password"
+                <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
                   class="form-control" placeholder="Confirm Password" data-rule-equalTo="#password">
               </div>
               <div class="error">
@@ -728,7 +728,7 @@
                 <label style="color: red;">Email/Phone Number already exists!</label>
               </div>
               {{/if}}
-              <button type="submit" class="btn   btn-primary"><i class="fa fa-user"></i> Create an account </button>
+              <button type="submit" class="btn btn-primary"><i class="fa fa-user"></i> Create an account </button>
             </form>
           </div>
           <div class="col-xs-12 col-sm-6">
