--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from templatecycle.com/tshop/v6/gray/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:06 GMT -->
+<!-- Mirrored from templatecycle.com/tshop/v6/gray/account-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:05 GMT -->
 
 <head>
   <meta charset="utf-8">
@@ -13,18 +13,12 @@
   <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.html">
   <link rel="shortcut icon" href="assets/ico/favicon.png">
   <title>TSHOP - Bootstrap E-Commerce Parallax Theme</title>
+
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- styles needed by smoothproducts.js for product zoom  -->
-  <link rel="stylesheet" href="assets/plugins/smoothproducts-master/css/smoothproducts.css">
-  <link href="assets/plugins/rating/bootstrap-rating.css" rel="stylesheet">
-
-  {{!-- sweetalert --}}
-
 
 
   <!-- Just for debugging purposes. -->
@@ -36,11 +30,13 @@
 
   <!-- include pace script for automatic web page progress bar  -->
 
+
   <script>
     paceOptions = {
       elements: true
     };
   </script>
+
   <script src="assets/js/pace.min.js"></script>
   <!-- add theme styles for this template -->
   <link id="pagestyle" rel="stylesheet" type="text/css" href="assets/css/skin-1.css">
@@ -126,30 +122,22 @@
   </style>
 
   <div class="themeControll">
-    <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center"> Choose
-      your colour </h3>
+    <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center"> Choose your
+      colour </h3>
     <a onclick="swapStyleSheet('assets/css/skin-1.css')" style="background:#4ec67f;border-top: 12px solid #27AE60;">
     </a>
-    <a onclick="swapStyleSheet('assets/css/skin-8.css')" style="background:#3BCA95;border-top: 12px solid #34BC8A">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-2.css')" style="background:#1ABC9C;border-top: 12px solid #16A085">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-3.css')" style="background:#3498DB;border-top: 12px solid #2980B9">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-4.css')" style="background:#9B59B6;border-top: 12px solid #9149AF">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-5.css')" style="background:#E74C3C;border-top: 12px solid #C0392B">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-7.css')" style="background:#95A5A6;border-top: 12px solid #7F8C8D">
-    </a>
-    <a onclick="swapStyleSheet('assets/css/skin-9.css')" style="background:#F7B529;border-top: 12px solid #E78E00">
-    </a>
+    <a onclick="swapStyleSheet('assets/css/skin-8.css')" style="background:#3BCA95;border-top: 12px solid #34BC8A"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-2.css')" style="background:#1ABC9C;border-top: 12px solid #16A085"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-3.css')" style="background:#3498DB;border-top: 12px solid #2980B9"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-4.css')" style="background:#9B59B6;border-top: 12px solid #9149AF"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-5.css')" style="background:#E74C3C;border-top: 12px solid #C0392B"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-7.css')" style="background:#95A5A6;border-top: 12px solid #7F8C8D"> </a>
+    <a onclick="swapStyleSheet('assets/css/skin-9.css')" style="background:#F7B529;border-top: 12px solid #E78E00"> </a>
     <a onclick="swapStyleSheet('assets/css/skin-10.css')" style="background:#F17370;border-top: 12px solid #F26663">
     </a>
     <a onclick="swapStyleSheet('assets/css/skin-11.css')" style="background:#273646;border-top: 12px solid #2ECC71">
     </a>
-    <a onclick="swapStyleSheet('assets/css/skin-6.css')" style="background:#34495E;border-top: 12px solid #283949">
-    </a>
+    <a onclick="swapStyleSheet('assets/css/skin-6.css')" style="background:#34495E;border-top: 12px solid #283949"> </a>
     <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center">
       <br>
       <a style="color:#fff" href="https://templatecycle.com/tshop/v6/index.html"><i class="fa fa-angle-double-left"></i>
@@ -690,236 +678,130 @@
   <!-- /.Fixed navbar  -->
 
   <div class="container main-container headerOffset">
+
     <div class="row">
       <div class="breadcrumbDiv col-lg-12">
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
-          <li><a href="category.html">{{currentProduct.parentCategory}}</a></li>
-          <li class="active">{{currentProduct.productName}}</li>
+          <li class="active"> Authentication</li>
         </ul>
       </div>
     </div>
-    <div class="row transitionfx">
 
-      <!-- left column -->
-      <div class="col-lg-6 col-md-6 col-sm-6">
-        <!-- product Image and Zoom -->
-        <div class="main-image sp-wrap col-lg-12 no-padding">
+    <div class="row">
 
-          <a href="images/productImages/{{currentProduct.productImage1}}"><img
-              src="images/productImages/{{currentProduct.productImage1}}" class="img-responsive" alt="img"></a>
-          <a href="images/productImages/{{currentProduct.productImage2}}"><img
-              src="images/productImages/{{currentProduct.productImage2}}" class="img-responsive" alt="img"></a>
-          <a href="images/productImages/{{currentProduct.productImage3}}"><img
-              src="images/productImages/{{currentProduct.productImage3}}" class="img-responsive" alt="img"></a>
-        </div>
-      </div>
-      <!--/ left column end -->
+      <div class="col-lg-9 col-md-9 col-sm-7">
 
-      <!-- right column -->
 
-      <!-- productFilter -->
-      <div class="col-lg-6 col-md-6 col-sm-5">
-        <h1 class="product-title"> {{currentProduct.productName}}</h1>
+        <div class="col-lg-9 col-md-9 col-sm-7">
+          <h1 class="section-title-inner"><span><i class="glyphicon glyphicon-user"></i> Change your password</span>
+          </h1>
 
-        <div class="product-price"><span class="price-sales"> ₹{{currentProduct.productPrice}}</span> <span
-            class="price-standard">₹999</span>
-        </div>
+          <div class="row userInfo">
 
-        <!-- productFilter -->
+            <div class="col-xs-12 col-sm-6">
+              <h2 class="block-title-2"> Please be enter new password, if it has to be changed. </h2>
 
-        <div class="cart-actions">
-          <div class="addto row">
-            <form action="/addToCart/{{currentProduct._id}}" method="POST">
-              <div class="col-lg-4 col-sm-4 col-xs-4">
-                <div class="filterBox">
-                  <label for="qty">Quantity</label>
-                  <select id="qty" class="form-control" name="productQuantity">
-                    {{#if productQtyLimit}}
-                    {{#each productQtyLimit}}
-                    <option value=1>{{this}}</option>
-                    {{/each}}
-                    {{else}}
-                    <span class="text-danger" >Out of stock!</span>
-                    {{/if}}
-                  </select>
+              <form id="passwordChangeForm" role="form" class="regForm">
+                <div class="form-group">
+                  <label>New Password</label>
+                  <input required id="password" minlength="5" maxlength="12"
+                    title="Please enter your new password, between 5 and 12 characters" type="tel"
+                    class="form-control" placeholder="Password">
                 </div>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <button type="submit" onclick="addedToCartSwal()" class="button btn-block btn-cart cart first"
-                  title="Add to Cart" type="button">
-                  Add to Cart
+                <div class="form-group">
+                  <label>Confirm New Password</label>
+                  <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
+                    class="form-control" placeholder="Confirm Password" data-rule-equalTo="#password">
+                </div>
+                <div class="form-group">
+                  <label>Current Password</label>
+                  <input name="currentPassword" title="Enter valid new password" type="tel" class="form-control"
+                    placeholder="Enter your current password" required minlength="8" maxlength="16">
+                </div>
+                <button id="verifyOTP" type="submit" class="btn btn-primary"> Change Password
                 </button>
-              </div>
-            </form>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><a class="link-wishlist wishlist btn-block ">Add
-                to Wishlist</a></div>
+              </form>
+            </div>
           </div>
-          <div style="clear:both"></div>
-          <h3 class="incaps"><i class="fa fa fa-check-circle-o color-in"></i> In stock</h3>
-
-          <h3 style="display:none" class="incaps"><i class="fa fa-minus-circle color-out"></i> Out of stock
-          </h3>
-
-          <h3 class="incaps"><i class="glyphicon glyphicon-lock"></i> Secure online ordering</h3>
-        </div>
-
-      </div>
-      <!--/ right column end -->
-
-    </div>
-  </div>
-  <!-- /main-container -->
-
-  <!-- Modal review start -->
-  <div class="modal  fade" id="modal-review" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
-          <h3 class="modal-title-site text-center">PRODUCT REVIEW </h3>
-        </div>
-        <div class="modal-body">
-
-          <h3 class="reviewtitle uppercase">You're reviewing: Lorem ipsum dolor sit amet</h3>
-
-          <form>
-            <div class="form-group">
-              <label>
-                How do you rate this product? </label> <br>
-
-              <div class="rating-here">
-                <input type="hidden" class="rating-tooltip-manual" data-filled="fa fa-star fa-2x"
-                  data-empty="fa fa-star-o fa-2x" data-fractions="3" />
-
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="rtext">Name</label>
-              <input type="text" class="form-control" id="rtext" placeholder="Your name" required>
-            </div>
-
-            <div class="form-group ">
-              <label>Review</label>
-              <textarea class="form-control" rows="3" placeholder="Your Review" required></textarea>
-
-            </div>
-
-
-            <button type="submit" class="btn btn-success">Submit Review</button>
-          </form>
-
+          <!--/row end-->
 
         </div>
 
       </div>
-      <!-- /.modal-content -->
+      <!--/row-->
 
+      <div style="clear:both"></div>
     </div>
-    <!-- /.modal-dialog -->
+    <!-- /wrapper -->
 
-  </div>
-  <!-- /.Modal review -->
+    <div class="gap"></div>
 
-  <!-- Le javascript
+
+    <!-- Le javascript
 ================================================== -->
 
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
-  <!-- jquery-migrate only for product details -->
-  <script src="../../../../code.jquery.com/jquery-migrate-1.2.1.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- include  parallax plugin -->
+    <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
 
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <!-- include jqueryCycle plugin -->
-  <script src="assets/js/jquery.cycle2.min.js"></script>
-  <!-- include easing plugin -->
-  <script src="assets/js/jquery.easing.1.3.js"></script>
+    <!-- optionally include helper plugins -->
+    <script type="text/javascript" src="assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
 
-  <!-- include  parallax plugin -->
-  <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
+    <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
 
-  <!-- optionally include helper plugins -->
-  <script type="text/javascript" src="assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
 
-  <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
+    <!-- include icheck plugin // customized checkboxes and radio buttons   -->
+    <script type="text/javascript" src="assets/plugins/icheck-1.x/icheck.min.js"></script>
 
-  <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
+    <!-- include grid.js // for equal Div height  -->
+    <script src="assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
+    <script src="assets/js/grids.js"></script>
 
-  <!-- include icheck plugin // customized checkboxes and radio buttons   -->
-  <script type="text/javascript" src="assets/plugins/icheck-1.x/icheck.min.js"></script>
+    <!-- include carousel slider plugin  -->
+    <script src="assets/js/owl.carousel.min.js"></script>
 
-  <!-- include grid.js // for equal Div height  -->
-  <script src="assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
-  <script src="assets/js/grids.js"></script>
+    <!-- jQuery select2 // custom select   -->
+    <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
-  <!-- include carousel slider plugin  -->
-  <script src="assets/js/owl.carousel.min.js"></script>
+    <!-- include touchspin.js // touch friendly input spinner component   -->
+    <script src="assets/js/bootstrap.touchspin.js"></script>
 
-  <!-- include smoothproducts // product zoom plugin  -->
-  <script type="text/javascript" src="assets/plugins/smoothproducts-master/js/smoothproducts.min.js"></script>
+    <!-- include validate.js // jquery plugin   -->
+    <script src="assets/js/jquery.validate.js"></script>
 
-  <script type="text/javascript">
-    /* wait for images to load */
-    $(window).load(function () {
-      $('.sp-wrap').smoothproducts();
-    });
-  </script>
-
-  <!-- jQuery select2 // custom select   -->
-  <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-
-  <!-- include touchspin.js // touch friendly input spinner component   -->
-  <script src="assets/js/bootstrap.touchspin.js"></script>
-
-  <!-- include custom script for site  -->
-  <script src="assets/js/script.js"></script>
+    <script>
+      $().ready(function () {
+        // validate the comment form when it is submitted
+        $("#regForm").validate();
+        // validate signup form on keyup and submit
+        $(".regForm").validate({
+          errorLabelContainer: $(".regForm div.error")
+        });
+      });
+    </script>
 
 
-  <script src="assets/plugins/rating/bootstrap-rating.min.js"></script>
-  <script>
-    $(function () {
-
-      $('.rating-tooltip-manual').rating({
-        extendSymbol: function () {
-          var title;
-          $(this).tooltip({
-            container: 'body',
-            placement: 'bottom',
-            trigger: 'manual',
-            title: function () {
-              return title;
-            }
-          });
-          $(this).on('rating.rateenter', function (e, rate) {
-            title = rate;
-            $(this).tooltip('show');
-          })
-            .on('rating.rateleave', function () {
-              $(this).tooltip('hide');
-            });
+    <script>
+      async function changepassword(event){
+        try{
+          event.preventDefault()
+          await fetch('/account/changepassword',{ method: 'PATCH', body: formData })
+        }catch(error){
+          console.error(error)
         }
-      });
+      }
+      passwordChangeForm.addEventListener('submit', changepassword)
+    </script>
 
-    });
-  </script>
 
-  {{!-- swal --}}
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-  <script>
-    addedToCartSwal = () => {
-      Swal.fire({
-        position: "top-end",
-        icon: "success",
-        title: "Your work has been saved",
-        showConfirmButton: false,
-        timer: 750
-      });
-    }
-  </script>
-
+    <!-- include custom script for site  -->
+    <script src="assets/js/script.js"></script>
 </body>
 
-<!-- Mirrored from templatecycle.com/tshop/v6/gray/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:50 GMT -->
+<!-- Mirrored from templatecycle.com/tshop/v6/gray/account-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:06 GMT -->
 
 </html>
