--- a/views/userViews/account.hbs
+++ b/views/userViews/account.hbs
@@ -724,9 +724,9 @@
                                             class="fa fa-edit"> </i> Add address</a></div>
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center ">
-                                <div class="thumbnail"><a title="Personal information" href="/account/personalInfo"><i
+                                <div class="thumbnail"><a title="Personal information" href="/account/changePassword"><i
                                             class="fa fa-cog"></i>
-                                        Personal information</a></div>
+                                        Change Password</a></div>
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center ">
                                 <div class="thumbnail"><a title="My wishlists" href="wishlist.html"><i
