--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -706,17 +706,18 @@
                 <div class="form-group">
                   <label>New Password</label>
                   <input required id="password" minlength="5" maxlength="12"
-                    title="Please enter your new password, between 5 and 12 characters" type="tel"
-                    class="form-control" placeholder="Password">
+                    title="Please enter your new password, between 5 and 12 characters" type="tel" class="form-control"
+                    placeholder="Password">
                 </div>
                 <div class="form-group">
                   <label>Confirm New Password</label>
                   <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
-                    class="form-control" placeholder="Confirm Password" data-rule-equalTo="#password">
+                    class="form-control" placeholder="Confirm Password" name="confirmPassword"
+                    data-rule-equalTo="#password">
                 </div>
                 <div class="form-group">
                   <label>Current Password</label>
-                  <input name="currentPassword" title="Enter valid new password" type="tel" class="form-control"
+                  <input name="currentPassword" title="Enter valid new password" type="password" class="form-control"
                     placeholder="Enter your current password" required minlength="8" maxlength="16">
                 </div>
                 <button id="verifyOTP" type="submit" class="btn btn-primary"> Change Password
@@ -773,10 +774,14 @@
     <!-- include validate.js // jquery plugin   -->
     <script src="assets/js/jquery.validate.js"></script>
 
+    {{!-- swal script --}}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
     <script>
       $().ready(function () {
         // validate the comment form when it is submitted
-        $("#regForm").validate();
+        $("#passwordChangeForm").validate();
         // validate signup form on keyup and submit
         $(".regForm").validate({
           errorLabelContainer: $(".regForm div.error")
@@ -784,17 +789,36 @@
       });
     </script>
 
-
     <script>
-      async function changepassword(event){
-        try{
-          event.preventDefault()
-          await fetch('/account/changepassword',{ method: 'PATCH', body: formData })
-        }catch(error){
+      async function changePassword() {
+        try {
+          if ($('.regForm').valid()) {
+            let formData = new FormData(this)
+            const response = await fetch('/account/changePassword', { method: 'PATCH', body: formData })
+            let data = await response.json()
+            if (data.success) {
+              Swal.fire({
+                icon: "success",
+                title: "Your new password has been successfully changed",
+                showConfirmButton: false,
+                timer: 3500
+              }).then( ()=>window.location.href='/account' )
+            } else {
+              Swal.fire({
+                icon: "error",
+                title: "Invalid current password",
+                text: "Enter valid password"
+              });
+            }
+          }
+        } catch (error) {
           console.error(error)
         }
       }
-      passwordChangeForm.addEventListener('submit', changepassword)
+      passwordChangeForm.addEventListener('submit', function (e) {
+        e.preventDefault()
+        changePassword.call(this)
+      })
     </script>
 
 
