week9 after 2nd attempt review

--- a/views/userViews/account.hbs
+++ b/views/userViews/account.hbs
@@ -728,10 +728,10 @@
                                             class="fa fa-cog"></i>
                                         Change Password</a></div>
                             </li>
-                            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center ">
+                            {{!-- <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center ">
                                 <div class="thumbnail"><a title="My wishlists" href="wishlist.html"><i
                                             class="fa fa-heart"></i> My wishlists </a></div>
-                            </li>
+                            </li> --}}
                         </ul>
                         <div class="clear clearfix"></div>
                     </div>
