--- a/views/userViews/orderStatus.hbs
+++ b/views/userViews/orderStatus.hbs
@@ -6,11 +6,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.html" />
-    <link rel="shortcut icon" href="assets/ico/favicon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-57-precomposed.html" />
+    <link rel="shortcut icon" href="/assets/ico/favicon.png" />
     <title>TSHOP - Bootstrap E-Commerce Parallax Theme</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
@@ -22,8 +22,8 @@
     <link href="/assets/css/style.css" rel="stylesheet" />
 
     <!-- styles needed by footable  -->
-    <link href="assets/css/footable-0.1.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/footable.sortable-0.1.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/footable-0.1.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/footable.sortable-0.1.css" rel="stylesheet" type="text/css" />
 
     <!-- Just for debugging purposes. -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -40,10 +40,10 @@
         };
     </script>
 
-    <script src="assets/js/pace.min.js"></script>
+    <script src="/assets/js/pace.min.js"></script>
     <!-- add theme styles for this template -->
-    <link id="pagestyle" rel="stylesheet" type="text/css" href="assets/css/skin-1.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/gray-look.css" />
+    <link id="pagestyle" rel="stylesheet" type="text/css" href="/assets/css/skin-1.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/gray-look.css" />
 </head>
 
 <body>
@@ -283,7 +283,7 @@
                     <span class="cartRespons colorWhite"> Cart (₹210.00) </span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="LF-Kart" style="width: 115px; height: 50px" />
+                    <img src="/images/logo.png" alt="LF-Kart" style="width: 115px; height: 50px" />
                 </a>
 
                 <!-- this part for mobile -->
