--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -147,12 +147,9 @@
                 <tr>
                     <td>{{this.productName}}</td>
                     <td>{{this.parentCategory}}</td>
-                    <td><img src="/images/productImages/{{this.productImage1}}" alt=""
-                            style="width: 100px; height: 100px"></td>
-                    <td><img src="/images/productImages/{{this.productImage2}}" alt=""
-                            style="width: 100px; height: 100px"></td>
-                    <td><img src="/images/productImages/{{this.productImage3}}" alt=""
-                            style="width: 100px; height: 100px"></td>
+                    <td><img src="/images/productImages/{{this.productImage1}}" style="width: 100px; height: 100px"></td>
+                    <td><img src="/images/productImages/{{this.productImage2}}" style="width: 100px; height: 100px"></td>
+                    <td><img src="/images/productImages/{{this.productImage3}}" style="width: 100px; height: 100px"></td>
                     <td>₹{{this.productPrice}}</td>
                     <td>{{this.productStock}}</td>
 
